modified:   notebooks/task_1_eda.ipynb

--- a/notebooks/task_1_eda.ipynb
+++ b/notebooks/task_1_eda.ipynb
@@ -91,14 +91,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "483d698a",
-   "metadata": {},
-   "source": [
-    "df=df_split"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "c7392812",
@@ -423,6 +415,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "5145d3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Group by Province\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m province_group = \u001b[43mdf\u001b[49m.groupby(\u001b[33m'\u001b[39m\u001b[33mProvince\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Calculate Claim Frequency\u001b[39;00m\n\u001b[32m      5\u001b[39m claim_freq = province_group.apply(\u001b[38;5;28;01mlambda\u001b[39;00m x: (x[\u001b[33m'\u001b[39m\u001b[33mTotalClaims\u001b[39m\u001b[33m'\u001b[39m] > \u001b[32m0\u001b[39m).mean())\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by Province\n",
+    "province_group = df.groupby('Province')\n",
+    "\n",
+    "# Calculate Claim Frequency\n",
+    "claim_freq = province_group.apply(lambda x: (x['TotalClaims'] > 0).mean())\n",
+    "\n",
+    "# Calculate Claim Severity (only policies with claims)\n",
+    "claim_sev = province_group.apply(lambda x: x.loc[x['TotalClaims'] > 0, 'TotalClaims'].mean())\n",
+    "\n",
+    "# Show summary\n",
+    "risk_summary = pd.DataFrame({\n",
+    "    'ClaimFrequency': claim_freq,\n",
+    "    'ClaimSeverity': claim_sev\n",
+    "}).reset_index()\n",
+    "\n",
+    "print(risk_summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "187a0e93",
    "metadata": {},
@@ -529,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "140c85e1",
    "metadata": {},
    "outputs": [],
@@ -537,6 +566,92 @@
     "# Save cleaned data\n",
     "df.to_csv('../data/insurance_clean.csv', index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ed010c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  UnderwrittenCoverID PolicyID TransactionMonth IsVATRegistered Citizenship  \\\n",
+      "0              145249    12827       2015-03-01            True               \n",
+      "1              145249    12827       2015-05-01            True               \n",
+      "2              145249    12827       2015-07-01            True               \n",
+      "3              145255    12827       2015-05-01            True               \n",
+      "4              145255    12827       2015-07-01            True               \n",
+      "5              145247    12827       2015-01-01            True               \n",
+      "6              145247    12827       2015-04-01            True               \n",
+      "7              145247    12827       2015-06-01            True               \n",
+      "8              145247    12827       2015-08-01            True               \n",
+      "9              145245    12827       2015-03-01            True               \n",
+      "\n",
+      "           LegalType Title Language                 Bank      AccountType  \\\n",
+      "0  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "1  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "2  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "3  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "4  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "5  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "6  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "7  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "8  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "9  Close Corporation    Mr  English  First National Bank  Current account   \n",
+      "\n",
+      "   ...        CoverCategory            CoverType            CoverGroup  \\\n",
+      "0  ...           Windscreen           Windscreen  Comprehensive - Taxi   \n",
+      "1  ...           Windscreen           Windscreen  Comprehensive - Taxi   \n",
+      "2  ...           Windscreen           Windscreen  Comprehensive - Taxi   \n",
+      "3  ...           Own damage           Own Damage  Comprehensive - Taxi   \n",
+      "4  ...           Own damage           Own Damage  Comprehensive - Taxi   \n",
+      "5  ...          Third Party          Third Party  Comprehensive - Taxi   \n",
+      "6  ...          Third Party          Third Party  Comprehensive - Taxi   \n",
+      "7  ...          Third Party          Third Party  Comprehensive - Taxi   \n",
+      "8  ...          Third Party          Third Party  Comprehensive - Taxi   \n",
+      "9  ...  Passenger Liability  Passenger Liability  Comprehensive - Taxi   \n",
+      "\n",
+      "               Section                          Product StatutoryClass  \\\n",
+      "0  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "1  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "2  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "3  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "4  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "5  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "6  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "7  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "8  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "9  Motor Comprehensive  Mobility Metered Taxis: Monthly     Commercial   \n",
+      "\n",
+      "  StatutoryRiskType TotalPremium TotalClaims LossRatio  \n",
+      "0     IFRS Constant    21.929825         0.0       0.0  \n",
+      "1     IFRS Constant    21.929825         0.0       0.0  \n",
+      "2     IFRS Constant     0.000000         0.0       NaN  \n",
+      "3     IFRS Constant   512.848070         0.0       0.0  \n",
+      "4     IFRS Constant     0.000000         0.0       NaN  \n",
+      "5     IFRS Constant     3.256435         0.0       0.0  \n",
+      "6     IFRS Constant    50.474737         0.0       0.0  \n",
+      "7     IFRS Constant    35.332316         0.0       0.0  \n",
+      "8     IFRS Constant     0.000000         0.0       NaN  \n",
+      "9     IFRS Constant     1.009474         0.0       0.0  \n",
+      "\n",
+      "[10 rows x 53 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54bc28c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
